syntax = "proto3";


package user;

service UserService {
  
  rpc Create(User) returns (User){}
  rpc Get(IdReq) returns (User){}
  rpc List(ListReq) returns (ListResp){}
  rpc Update(User) returns (User){}
  rpc Delete(IdReq) returns (EmptyResp){}
  rpc CheckField(Check) returns(Status){}
  rpc Login(Login1) returns (User){}
}

message Login1{
  string password = 1;
  string email = 2;
}

message Check{
  string field = 1;
  string value = 2;
}
message Status {
  bool status = 1;
}

message EmptyResp {}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
    string profile_photo = 5;
    string bio = 6;
    string email = 7;
    string gender = 8;
    string address = 9;
    string phone_number = 10;
    string created_at = 11;
    string updated_at = 12;
    string deleted_at = 13;
    repeated Task task = 14;
    string password = 15;
    string access_token = 16;
    string refresh_token = 17;
}


message Task {
  string id = 1;
  string name = 2;
  string title = 3;
  string summary = 4;
  string assignee_id = 5;
  string status = 6;
  string deadline = 7;
  string created_at = 8;
  string updated_at = 9;
  string deleted_at = 10;
}


message IdReq{
    string id = 1;
}

message ListReq {
  int64 page = 1;
  int64 limit = 2;
}

message ListResp {
  repeated User Users = 1;
  int64 count = 2;
}


